--- a/SehomeTutoringCenter/SehomeTutoringCenter.csproj
+++ b/SehomeTutoringCenter/SehomeTutoringCenter.csproj
@@ -46,16 +46,25 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Form1.cs">
+    <Compile Include="newStudentForm.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="Form1.Designer.cs">
-      <DependentUpon>Form1.cs</DependentUpon>
+    <Compile Include="newStudentForm.Designer.cs">
+      <DependentUpon>newStudentForm.cs</DependentUpon>
+    </Compile>
+    <Compile Include="studentLoginForm.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="studentLoginForm.Designer.cs">
+      <DependentUpon>studentLoginForm.cs</DependentUpon>
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <EmbeddedResource Include="Form1.resx">
-      <DependentUpon>Form1.cs</DependentUpon>
+    <EmbeddedResource Include="newStudentForm.resx">
+      <DependentUpon>newStudentForm.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="studentLoginForm.resx">
+      <DependentUpon>studentLoginForm.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
