changes to the student login page, new student form, and the center stats page

--- a/SehomeTutoringCenter/SehomeTutoringCenter.csproj
+++ b/SehomeTutoringCenter/SehomeTutoringCenter.csproj
@@ -122,7 +122,7 @@
       <DesignTimeSharedInput>True</DesignTimeSharedInput>
     </Compile>
     <None Include="SehomeTutoringCenter.sqlite">
-      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
   </ItemGroup>
   <ItemGroup>
@@ -132,6 +132,9 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="Resources\Sehome_color129x200-97x150.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <Content Include="temp.txt" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it.
