--- a/SehomeTutoringCenter/SehomeTutoringCenter.csproj
+++ b/SehomeTutoringCenter/SehomeTutoringCenter.csproj
@@ -73,6 +73,7 @@
     <Compile Include="newStudentForm.Designer.cs">
       <DependentUpon>newStudentForm.cs</DependentUpon>
     </Compile>
+    <Compile Include="Registration.cs" />
     <Compile Include="SehomeContext.cs" />
     <Compile Include="Student.cs" />
     <Compile Include="studentLoginForm.cs">
