--- a/SehomeTutoringCenter/SehomeTutoringCenter.csproj
+++ b/SehomeTutoringCenter/SehomeTutoringCenter.csproj
@@ -56,6 +56,7 @@
       <HintPath>..\packages\System.Data.SQLite.Linq.1.0.99.0\lib\net451\System.Data.SQLite.Linq.dll</HintPath>
       <Private>True</Private>
     </Reference>
+    <Reference Include="System.Windows.Forms.DataVisualization" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="Microsoft.CSharp" />
@@ -90,6 +91,12 @@
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="studentStats.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="studentStats.Designer.cs">
+      <DependentUpon>studentStats.cs</DependentUpon>
+    </Compile>
     <Compile Include="Subject.cs" />
     <Compile Include="Visit.cs" />
     <EmbeddedResource Include="adminForm.resx">
@@ -111,6 +118,9 @@
       <DependentUpon>Resources.resx</DependentUpon>
       <DesignTime>True</DesignTime>
     </Compile>
+    <EmbeddedResource Include="studentStats.resx">
+      <DependentUpon>studentStats.cs</DependentUpon>
+    </EmbeddedResource>
     <None Include="packages.config" />
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
