Admin page file browser and csv upload.
File browser successfully implemented for subject/teacher file selection

CSV upload into database funtional, but duplicate checking needs further
work. Specifically rows need to be checked for matching TeacherName and
Name. Not just Name as it currently is.

--- a/SehomeTutoringCenter/SehomeTutoringCenter.csproj
+++ b/SehomeTutoringCenter/SehomeTutoringCenter.csproj
@@ -160,9 +160,7 @@
       <DependentUpon>Settings.settings</DependentUpon>
       <DesignTimeSharedInput>True</DesignTimeSharedInput>
     </Compile>
-    <None Include="SehomeTutoringCenter.sqlite">
-      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
-    </None>
+    <None Include="SehomeTutoringCenter.sqlite" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config">
