"Do not copy"  changed to "Copy":wq

--- a/SehomeTutoringCenter/SehomeTutoringCenter.csproj
+++ b/SehomeTutoringCenter/SehomeTutoringCenter.csproj
@@ -160,7 +160,9 @@
       <DependentUpon>Settings.settings</DependentUpon>
       <DesignTimeSharedInput>True</DesignTimeSharedInput>
     </Compile>
-    <None Include="SehomeTutoringCenter.sqlite" />
+    <None Include="SehomeTutoringCenter.sqlite">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config">
